--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@auth0/auth0-spa-js": "^1.18.0",
     "axios": "^0.22.0",
     "core-js": "^3.6.5",
+    "sass": "^1.42.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vue-virtual-scroller": "^1.0.10",
@@ -25,7 +26,6 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   }
