--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "./make_auth_config.sh && vue-cli-service build",
+    "build": "chmod a+x ./make_auth_config.sh && ./make_auth_config.sh && vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
