--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@braid/vue-formulate": "^2.5.2",
     "axios": "^0.22.0",
     "core-js": "^3.6.5",
+    "normalize.css": "^8.0.1",
     "sass": "^1.42.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
