--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sass": "^1.42.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "vue": "^2.6.11",
+    "vue-clickaway": "^2.2.2",
     "vue-router": "^3.2.0",
     "vue-virtual-scroller": "^1.0.10",
     "vuex": "^3.4.0"
