--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "vue": "^2.6.11",
     "vue-clickaway": "^2.2.2",
+    "vue-draggable-resizable": "^2.3.0",
     "vue-router": "^3.2.0",
     "vue-virtual-scroller": "^1.0.10",
+    "vue-youtube": "^1.4.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
